--- a/package.json
+++ b/package.json
@@ -23,8 +23,17 @@
   },
   "dependencies": {
     "cssnano": "^4.1.11",
+    "first": "^0.0.3",
+    "r": "^0.0.5",
+    "re": "^0.1.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "rreact-dom": "^1.0.0",
+    "s": "^1.0.0",
+    "sr": "^1.0.4",
+    "src": "^1.1.2"
   },
-  "browserslist":["last 2 versions"]
+  "browserslist": [
+    "last 2 versions"
+  ]
 }
