--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "first": "^0.0.3",
     "r": "^0.0.5",
     "re": "^0.1.4",
+    "rea": "^0.0.1",
+    "reac": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.23.0",
     "rreact-dom": "^1.0.0",
     "s": "^1.0.0",
     "sr": "^1.0.4",
