--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "parcel-bundler": "^1.12.5"
   },
   "dependencies": {
+    "autoprefixer": "^9.8.8",
     "cssnano": "^4.1.11",
     "first": "^0.0.3",
+    "postcss": "^7.0.39",
     "r": "^0.0.5",
     "re": "^0.1.4",
     "rea": "^0.0.1",
@@ -35,6 +37,7 @@
     "s": "^1.0.0",
     "sr": "^1.0.4",
     "src": "^1.1.2",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
     "u": "^0.1.0"
   },
   "browserslist": [
