--- a/package.json
+++ b/package.json
@@ -22,23 +22,15 @@
     "parcel-bundler": "^1.12.5"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.3.0",
     "autoprefixer": "^9.8.8",
     "cssnano": "^4.1.11",
-    "first": "^0.0.3",
     "postcss": "^7.0.39",
-    "r": "^0.0.5",
-    "re": "^0.1.4",
-    "rea": "^0.0.1",
-    "reac": "^0.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
-    "rreact-dom": "^1.0.0",
-    "s": "^1.0.0",
-    "sr": "^1.0.4",
-    "src": "^1.1.2",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17",
-    "u": "^0.1.0"
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
   },
   "browserslist": [
     "last 2 versions"
